--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -8,19 +8,75 @@
       <main class="px-4 md:col-span-10">
         <%- include('../includes/auth.ejs') %>
 
-        <header class="mt-4">
+        <header class="mt-4 text-center">
           <h2
             class="text-gray-700 text-2xl font-semibold leading-none tracking-wider"
           >
-            The Store
+            Your Orders
           </h2>
-          <h3 class="text-lg font-semibold tracking-wider">
-            For your daily needs
-          </h3>
         </header>
 
         <div class="text-center p-5"">
-          
+          <% if (orders.length > 0) { %>
+            
+            <% for( let order of orders ) { %>
+              <div class="flex flex-col">
+                <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
+                  <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
+                    <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
+                      <table class="min-w-full divide-y divide-gray-200">
+                        <thead class="bg-gray-50">
+                          <tr>
+                            <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                              Order ID #<%= order.id %> 
+                            </th>
+                            <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                              Quantity
+                            </th>
+                            <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                              Price
+                            </th>
+                          </tr>
+                        </thead>
+                        <tbody class="bg-white divide-y divide-gray-200">
+                          
+                          <% order.Products.forEach(product => { %>
+                            <tr>
+                              <td class="px-6 py-4 whitespace-nowrap">
+                                <div class="flex items-center">
+                                  <div class="flex-shrink-0 h-10 w-10">
+                                    <img class="h-10 w-10 rounded-full" src="<%= product.imageUrl %>" alt="<%= product.title %>">
+                                  </div>
+                                  <div class="ml-4 text-left">
+                                    <div class="text-sm font-medium text-gray-900">
+                                      <%= product.title %> 
+                                    </div>
+                                    <div class="text-sm text-gray-500">
+                                      <%= product.description %> 
+                                    </div>
+                                  </div>
+                                </div>
+                              </td>
+                              <td class="px-6 py-4 whitespace-nowrap">
+                                <p class="text-left text-sm text-gray-500"><%= product.OrderItem.qty %></p>
+                              </td>
+                              <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+                                <p class="text-left text-sm text-gray-500">US$ <%= product.OrderItem.price %></p>
+                              </td>
+                            </tr>
+                          <% }) %> 
+  
+                        </tbody>
+                      </table>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            <% } %>
+
+          <% } else { %>
+            <h1 class="text-4xl">Nothing here</h1>  
+          <% } %>
         </div>
       </main>
       <!-- end wrapper -->
