--- a/views/shop/shop.ejs
+++ b/views/shop/shop.ejs
@@ -8,15 +8,12 @@
       <main class="px-4 md:col-span-10">
         <%- include('../includes/auth.ejs') %>
 
-        <header class="mt-4">
+        <header class="mt-4 text-center">
           <h2
             class="text-gray-700 text-2xl font-semibold leading-none tracking-wider"
           >
             The Store
           </h2>
-          <h3 class="text-lg font-semibold tracking-wider">
-            For your daily needs
-          </h3>
         </header>
 
         <div class="text-center p-5"">
