--- a/views/includes/auth.ejs
+++ b/views/includes/auth.ejs
@@ -1,12 +1,21 @@
 <div class="flex justify-center md:justify-end">
+  <% if (!isAuthenticated) { %> 
   <a
-    href="#"
+    href="/login"
     class="btn text-primary border-primary md:border-2 hover:bg-green-200 transition ease-out duration-500"
     >Log in</a
   >
   <a
-    href="#"
-    class="btn text-primary ml-2 border-primary md:border-2 hover:bg-green-200 transition ease-out duration-500"
-    >Sign up</a
+  href="#"
+  class="btn text-primary ml-2 border-primary md:border-2 hover:bg-green-200 transition ease-out duration-500"
+  >Sign up</a
   >
+  <% } else { %>
+  <form action="/logout" method="POST">
+    <button 
+      type="submit"
+      class="btn text-primary ml-2 border-primary md:border-2 hover:bg-green-200 transition ease-out duration-500"
+      >Logout</button>
+  </form>
+  <% } %>
 </div>
