--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -94,6 +94,7 @@
             </div>
           </div>
           <div class="px-4 py-3 bg-gray-50 text-center sm:px-6">
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <button
               type="submit"
               class="btn text-primary border-primary md:border-2 hover:bg-green-500 transition ease-out duration-500"
