--- a/views/admin/myproducts.ejs
+++ b/views/admin/myproducts.ejs
@@ -8,15 +8,12 @@
       <main class="px-4 md:col-span-10">
         <%- include('../includes/auth.ejs') %>
 
-        <header class="mt-4">
+        <header class="mt-4 text-center">
           <h2
             class="text-gray-700 text-2xl font-semibold leading-none tracking-wider"
           >
-            The Store
+            My Products
           </h2>
-          <h3 class="text-lg font-semibold tracking-wider">
-            For your daily needs
-          </h3>
         </header>
 
         <div class="text-center p-5"">
@@ -40,6 +37,7 @@
                     <a href="/admin/edit-product/<%= product.id %>" class="btn hover:text-gray-400">Edit</a>
                     <form class="inline-block" action="/admin/delete-product" method="POST">
                       <input type="hidden" name="productId" value="<%= product.id %>" />
+                      <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                       <button type="submit" class="btn hover:text-gray-400">Delete</button>
                     </form>
                   </div>
