--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -10,7 +10,7 @@
         <h2
           class="text-gray-700 text-2xl font-semibold leading-none tracking-wider"
         >
-          Login
+          Sign Up
         </h2>
       </header>
 
@@ -26,13 +26,29 @@
       <% } %>
       <!-- form go here -->
       <form
-        action="/login"
+        action="/signup"
         method="POST"
         class="w-2/4 mx-auto"
       >
         <div class="shadow overflow-hidden sm:rounded-md">
           <div class="px-4 py-5 bg-white sm:p-6">
             <div class="grid grid-cols-6 gap-6">
+
+              <div class="col-span-6">
+                <label
+                  for="username"
+                  class="block text-sm font-medium text-gray-700"
+                  >Username</label
+                >
+                <input
+                  type="username"
+                  name="username"
+                  id="username"
+                  autocomplete="off"
+                  class="mt-1 focus:ring-indigo-300 focus:border-indigo-100 block w-full shadow-sm sm:text-sm border border-gray-300 p-1 rounded-md"
+                />
+              </div>
+
               <div class="col-span-6">
                 <label
                   for="email"
@@ -63,6 +79,21 @@
                 />
               </div>
 
+              <div class="col-span-6">
+                <label
+                  for="confirmPassword"
+                  class="block text-sm font-medium text-gray-700"
+                  >Confirm Password</label
+                >
+                <input
+                  type="password"
+                  name="confirmPassword"
+                  id="confirmPassword"
+                  autocomplete="off"
+                  class="mt-1 focus:ring-indigo-300 focus:border-indigo-100 block w-full shadow-sm sm:text-sm border border-gray-300 p-1 rounded-md"
+                />
+              </div>
+
             </div>
           </div>
           <div class="px-4 py-3 bg-gray-50 text-center sm:px-6">
@@ -71,7 +102,7 @@
               type="submit"
               class="btn text-primary border-primary md:border-2 hover:bg-green-500 transition ease-out duration-500"
             >
-              Login
+              Sign Up
             </button>
           </div>
         </div>
