--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -37,6 +37,7 @@
             <form action="/add-to-cart" class="inline-block" method="POST">
               <input type="hidden" name="productId" value="<%= product.id %>" />
               <% if (isAuthenticated) { %>
+                <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                 <button type="submit" class="btn hover:text-gray-400">Add to Cart</button>
               <% } %>
             </form>
