--- a/views/shop/shop.ejs
+++ b/views/shop/shop.ejs
@@ -38,6 +38,7 @@
                     <form class="inline-block" action="/add-to-cart" method="POST">
                       <input type="hidden" name="productId" value="<%= product.id %>" />
                       <% if (isAuthenticated) { %>
+                        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                         <button type="submit" class="btn hover:text-gray-400">Add to Cart</button>
                       <% } %>
                     </form>
