adding auth validation and password reset

--- a/views/admin/myproducts.ejs
+++ b/views/admin/myproducts.ejs
@@ -46,7 +46,7 @@
             </div>
 
           <% } else { %>
-            <h1 class="text-4xl">No Products!</h1>
+            <h1 class="text-4xl">You don't have any Products!</h1>
           <% } %>
         </div>
       </main>
