--- a/views/auth/new-password.ejs
+++ b/views/auth/new-password.ejs
@@ -10,7 +10,7 @@
         <h2
           class="text-gray-700 text-2xl font-semibold leading-none tracking-wider"
         >
-          Login
+          Reset Password
         </h2>
       </header>
 
@@ -26,7 +26,7 @@
       <% } %>
       <!-- form go here -->
       <form
-        action="/login"
+        action="/new-password"
         method="POST"
         class="w-2/4 mx-auto"
       >
@@ -35,15 +35,14 @@
             <div class="grid grid-cols-6 gap-6">
               <div class="col-span-6">
                 <label
-                  for="email"
+                  for="newPassword"
                   class="block text-sm font-medium text-gray-700"
-                  >E-mail</label
+                  >New Password</label
                 >
                 <input
-                  type="email"
-                  name="email"
-                  id="email"
-                  value="<%= prevInputs ? prevInputs.email : '' %>"
+                  type="password"
+                  name="newPassword"
+                  id="newPassword"
                   autocomplete="off"
                   class="mt-1 focus:ring-indigo-300 focus:border-indigo-100 block w-full shadow-sm sm:text-sm border border-gray-300 p-1 rounded-md"
                 />
@@ -51,15 +50,14 @@
 
               <div class="col-span-6">
                 <label
-                  for="password"
+                  for="confirmNewPassword"
                   class="block text-sm font-medium text-gray-700"
-                  >Password</label
+                  >Confirm New Password</label
                 >
                 <input
                   type="password"
-                  name="password"
-                  id="password"
-                  value="<%= prevInputs ? prevInputs.password : '' %>"
+                  name="confirmNewPassword"
+                  id="confirmNewPassword"
                   autocomplete="off"
                   class="mt-1 focus:ring-indigo-300 focus:border-indigo-100 block w-full shadow-sm sm:text-sm border border-gray-300 p-1 rounded-md"
                 />
@@ -68,16 +66,15 @@
             </div>
           </div>
           <div class="px-4 py-3 bg-gray-50 text-center sm:px-6">
+            <input type="hidden" name="userId" value="<%= userId %>">
+            <input type="hidden" name="passwordToken" value="<%= passwordToken %>">
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <button
               type="submit"
               class="btn text-primary border-primary md:border-2 hover:bg-green-500 transition ease-out duration-500"
             >
-              Login
+              Set a New Password
             </button>
-          </div>
-          <div class="px-4 py-3 bg-gray-50 text-center sm:px-6">
-            <a href="/reset">Reset Password</a>
           </div>
         </div>
       </form>
