--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -44,6 +44,7 @@
                   type="username"
                   name="username"
                   id="username"
+                  value="<%= prevInputs ? prevInputs.username : '' %>"
                   autocomplete="off"
                   class="mt-1 focus:ring-indigo-300 focus:border-indigo-100 block w-full shadow-sm sm:text-sm border border-gray-300 p-1 rounded-md"
                 />
@@ -59,6 +60,7 @@
                   type="email"
                   name="email"
                   id="email"
+                  value="<%= prevInputs ? prevInputs.email : '' %>"
                   autocomplete="off"
                   class="mt-1 focus:ring-indigo-300 focus:border-indigo-100 block w-full shadow-sm sm:text-sm border border-gray-300 p-1 rounded-md"
                 />
@@ -74,6 +76,7 @@
                   type="password"
                   name="password"
                   id="password"
+                  value="<%= prevInputs ? prevInputs.password : '' %>"
                   autocomplete="off"
                   class="mt-1 focus:ring-indigo-300 focus:border-indigo-100 block w-full shadow-sm sm:text-sm border border-gray-300 p-1 rounded-md"
                 />
@@ -89,6 +92,7 @@
                   type="password"
                   name="confirmPassword"
                   id="confirmPassword"
+                  value="<%= prevInputs ? prevInputs.confirmPassword : '' %>"
                   autocomplete="off"
                   class="mt-1 focus:ring-indigo-300 focus:border-indigo-100 block w-full shadow-sm sm:text-sm border border-gray-300 p-1 rounded-md"
                 />
