--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -20,7 +20,7 @@
       <div class="card hover:shadow-lg m-auto max-w-lg grid grid-cols-2">
         <div class="col-span-1">
           <img
-            src="<%= product.imageUrl %>"
+            src="/<%= product.imageUrl %>"
             alt=""
             class="h-full w-full object-cover"
           />
