--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -15,11 +15,21 @@
     </header>
 
     <div>
+      <% if (message) { %>
+        <div id="flash-message" class="w-2/4 mx-auto my-2 bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" role="alert">
+          <strong class="font-bold">Oops!</strong>
+          <span class="block sm:inline"><%= message %> </span>
+          <span id="flash-message-btn" class="absolute top-0 bottom-0 right-0 px-4 py-3">
+            <svg class="fill-current h-6 w-6 text-red-500" role="button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><title>Close</title><path d="M14.348 14.849a1.2 1.2 0 0 1-1.697 0L10 11.819l-2.651 3.029a1.2 1.2 0 1 1-1.697-1.697l2.758-3.15-2.759-3.152a1.2 1.2 0 1 1 1.697-1.697L10 8.183l2.651-3.031a1.2 1.2 0 1 1 1.697 1.697l-2.758 3.152 2.758 3.15a1.2 1.2 0 0 1 0 1.698z"/></svg>
+          </span>
+        </div>
+      <% } %>
       <!-- form go here -->
       <form
         action="/admin/<%= edit ? 'edit-product' : 'add-product' %>"
         method="POST"
         class="w-2/4 mx-auto"
+        enctype="multipart/form-data"
       >
         <div class="shadow overflow-hidden sm:rounded-md">
           <div class="px-4 py-5 bg-white sm:p-6">
@@ -33,7 +43,7 @@
                 <input
                   type="text"
                   name="title"
-                  value="<%= edit ? product.title : '' %>"
+                  value="<%= edit || hasError ? product.title : '' %>"
                   id="title"
                   autocomplete="off"
                   class="mt-1 focus:ring-indigo-300 focus:border-indigo-100 block w-full shadow-sm sm:text-sm border border-gray-300 p-1 rounded-md"
@@ -48,8 +58,9 @@
                 >
                 <input
                   type="number"
+                  step="0.01"
                   name="price"
-                  value="<%= edit ? product.price : '' %>"
+                  value="<%= edit || hasError ? product.price : '' %>"
                   id="price"
                   autocomplete="off"
                   class="mt-1 focus:ring-indigo-300 focus:border-indigo-100 block w-full shadow-sm sm:text-sm border border-gray-300 p-1 rounded-md"
@@ -60,13 +71,12 @@
                 <label
                   for="image-url"
                   class="block text-sm font-medium text-gray-700"
-                  >Image URL</label
+                  >Image</label
                 >
                 <input
-                  type="text"
-                  name="image_url"
-                  value="<%= edit ? product.imageUrl : '' %>"
-                  id="image-url"
+                  type="file"
+                  name="image"
+                  id="image"
                   class="mt-1 focus:ring-indigo-300 focus:border-indigo-100 block w-full shadow-sm sm:text-sm border border-gray-300 p-1 rounded-md"
                 />
               </div>
@@ -83,12 +93,12 @@
                   rows="3"
                   class="shadow-sm focus:ring-indigo-300 focus:border-indigo-100 mt-1 block w-full sm:text-sm border border-gray-300 p-1 rounded-md"
                 >
-<%= edit ? product.description : '' %></textarea
+<%= edit || hasError ? product.description : '' %></textarea
                 >
                 <input
                   type="hidden"
                   name="id"
-                  value="<%= edit ? product.id : '' %>"
+                  value="<%= edit || hasError ? product.id : '' %>"
                 />
               </div>
             </div>
