--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -28,7 +28,7 @@
                         <thead class="bg-gray-50">
                           <tr>
                             <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                              Order ID #<%= order.id %> 
+                              Order ID #<%= order.id %> - <a href="/invoice/<%= order.id %>">see invoice</a>
                             </th>
                             <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
                               Quantity
